--- a/docs/pages/coagents/coagent-demo.mdx
+++ b/docs/pages/coagents/coagent-demo.mdx
@@ -15,5 +15,5 @@ into a comprehensive answer, including references to the sources used.
 
 The agent state is streamed live to the frontend, so that the user can see the work progressing.
 
-Both the LangGraph and the CopilotKit specific code for this demo is [available
+Both the LangGraph and the CopilotKit specific code for this demo are [available
 on GitHub](https://github.com/CopilotKit/CopilotKit/tree/main/examples/coagents-ai-researcher).
