--- a/docs/pages/copilot-textarea-quickstart.mdx
+++ b/docs/pages/copilot-textarea-quickstart.mdx
@@ -106,8 +106,8 @@ const TextAreaComponent: FC = () => {
     
 ## Next Steps
     
-- We highly recommend checkout out our simple **[Copilot Textarea Tutorial](/tutorial-textarea/overview)**.
+- We highly recommend you check out our simple **[Copilot Textarea Tutorial](/tutorial-textarea/overview)**.
     
 ## Reference
 
-For further detail see [`CopilotTextare Reference`](/reference/components/CopilotTextarea)
+For further detail, see [`CopilotTextare Reference`](/reference/components/CopilotTextarea)
