--- a/docs/pages/copilot-textarea-quickstart.mdx
+++ b/docs/pages/copilot-textarea-quickstart.mdx
@@ -110,4 +110,4 @@ const TextAreaComponent: FC = () => {
     
 ## Reference
 
-For further detail, see [`CopilotTextare Reference`](/reference/components/CopilotTextarea)
+For further details, see [`CopilotTextare Reference`](/reference/components/CopilotTextarea)
