--- a/docs/pages/connect-to-your-data.mdx
+++ b/docs/pages/connect-to-your-data.mdx
@@ -39,7 +39,7 @@ export function YourComponent() {
 ```
 
 ### Test it out!
-The data your provided is now available to the Copilot.
+The data you provided is now available to the Copilot.
 Test it out by passing some data in the hook and asking the copilot questions about it.
 <div className="mt-2 mb-4">
   <img 
