--- a/docs/pages/copilot-suggestions.mdx
+++ b/docs/pages/copilot-suggestions.mdx
@@ -64,8 +64,8 @@ export function MyComponent() {
 }
 ```
  
-In the example above, the suggestions are generated based on the given instructions.
-The hook monitors `relevantState`, and updates suggestions accordingly whenever it changes.
+In the example above, the suggestions are generated based on the provided instructions.
+The hook monitors `relevantState`, and updates the suggestions accordingly whenever they change.
 
 </Steps>
 
