--- a/docs/pages/copilot-textarea-quickstart.mdx
+++ b/docs/pages/copilot-textarea-quickstart.mdx
@@ -106,7 +106,7 @@ const TextAreaComponent: FC = () => {
     
 ## Next Steps
     
-- We highly recommend checkout out our simple **[Copilot Textarea Tutorial](/tutorial-textarea/overview)**.
+- We highly recommend check out our simple **[Copilot Textarea Tutorial](/tutorial-textarea/overview)**.
     
 ## Reference
 
