--- a/docs/pages/frontend-action.mdx
+++ b/docs/pages/frontend-action.mdx
@@ -31,7 +31,7 @@ export function YourComponent() {
     description: "Add a new todo item to the list",
     parameters: [
       {
-        name: "todoText",
+        name: "to-do Text",
         type: "string",
         description: "The text of the todo item to add",
         required: true,
