--- a/docs/pages/generative-ui.mdx
+++ b/docs/pages/generative-ui.mdx
@@ -23,7 +23,7 @@ If you're using Next.js with the App Router, you'll need to add the `"use client
   <Tabs.Tab>
     `useCopilotAction` can be used with a `render` function and without a `handler` to display information or UI elements within the chat.
     
-    Here's an example to render a calendar meeting.
+    Here’s an example of rendering a calendar meeting.
     <Frame>
       <img 
         src="/images/render-only-example.png" 
