--- a/docs/pages/quickstart.mdx
+++ b/docs/pages/quickstart.mdx
@@ -83,7 +83,7 @@ npm install @copilotkit/react-core @copilotkit/react-ui
 
 ## Next Steps
 
-We highly recommend checkout out our simple **[AI Todo List Copilot Tutorial](/tutorial-ai-todo-list-copilot/overview)** to learn more about CopilotKit.
+We highly recommend check out our simple **[AI Todo List Copilot Tutorial](/tutorial-ai-todo-list-copilot/overview)** to learn more about CopilotKit.
 
 ## CoAgents (Early Access)
 
