--- a/docs/pages/reference/hooks/useCopilotChatSuggestions.mdx
+++ b/docs/pages/reference/hooks/useCopilotChatSuggestions.mdx
@@ -57,8 +57,8 @@ export function MyComponent() {
 }
 ```
  
-In the example above, the suggestions are generated based on the given instructions.
-The hook monitors `appState`, and updates suggestions accordingly whenever it changes.
+In the example above, the suggestions are generated based on the provided instructions.
+The hook monitors `appState`, and updates the suggestions accordingly whenever they change.
  
 ### Behavior and Lifecycle
  
